--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
 </p>
 <p class="contact__note">Написать лично вы можете по координатам</p>
 <div class="contact__icons">
-  <a href="#"><svg  width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <a href="https://t.me/pryobrazhenskaya"><svg  width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M16.8732 19.1268L35 1M16.8732 19.1268L20.8766 32.9564C21.4828 35.0508 24.4405 35.0785 25.0858 32.9957L35 1M16.8732 19.1268L3.04363 15.1235C0.949163 14.5172 0.921495 11.5595 3.00425 10.9142L35 1" stroke="current" stroke-width="1.09859"/>
 </svg></a>
 
-  <a href="#"><svg  width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <a href="https://www.instagram.com/pryobrazhenskaya?igsh=MWZkcnlpYXU4eHZqaw=="><svg  width="38" height="38" viewBox="0 0 38 38" fill="none" xmlns="http://www.w3.org/2000/svg">
 <rect x="0.612903" y="0.612903" width="36.7742" height="36.7742" rx="9.19355" stroke="current" stroke-width="1.22581"/>
 <circle cx="19.0004" cy="18.9999" r="9.80645" stroke="current" stroke-width="1.22581"/>
 <circle cx="30.0323" cy="7.96784" r="2.45161" stroke="current" stroke-width="1.22581"/>
