--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <div class="write-header-part">
                <div class="header__controls">
           <div class="lang " aria-label="Выбор языка">
-            <a href="#" class="is-active" lang="ru">RU</a>
-            <a href="#" lang="en">EN</a>
-            <a href="#" lang="uk">UA</a>
+            <a href="index.html" class="is-active" lang="ru">RU</a>
+            <a href="en.html" lang="en">EN</a>
+            <a href="ua.htmn" lang="uk">UA</a>
           </div>
 
         <!-- Навигация (десктоп) -->
@@ -469,7 +469,7 @@ document.querySelector("#contact-form").addEventListener("submit", function(e) {
   <div class="footer__nav mobile-only">
     <div class="footer__row first">
       <a href="#portfolio">ПОРТФОЛИО</a>
-      <a href="#about">ОБО МНЕ</a>
+      <a href="#about2">ОБО МНЕ</a>
       <a href="#">ГЛАВНАЯ</a>
     </div>
     <div class="footer__row">
