--- a/en.html
+++ b/en.html
@@ -9,7 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="top-accent" aria-hidden="true"></div>
+
+    <div id="preloader">
+    <div class="loader"></div>
+  </div>
+  <div id="main">
+      <div class="top-accent" aria-hidden="true"></div>
 
   <header class="header" role="banner">
     <div class="container header__row">
@@ -458,6 +463,8 @@ document.querySelector("#contact-form").addEventListener("submit", function(e) {
     <div class="footer__author">Pryobrazhenskaya Yulia</div>
   </div>
 </footer>
+  </div>
+
 
 
 
