--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="top-accent" aria-hidden="true"></div>
+  <!-- <div class="top-accent" aria-hidden="true"></div> -->
 
   <header class="header" role="banner">
     <div class="container header__row">
