--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+     <div id="preloader">
+    <div class="loader"></div>
+  </div>
   <!-- <div class="top-accent" aria-hidden="true"></div> -->
 
-  <header class="header" role="banner">
+
+    <div id="main">
+        <header class="header" role="banner">
     <div class="container header__row">
       <div class="header__grid">
         
@@ -480,6 +486,9 @@ document.querySelector("#contact-form").addEventListener("submit", function(e) {
     <div class="footer__author">Pryobrazhenskaya Yulia</div>
   </div>
 </footer>
+
+    </div>
+
 
 
 
