--- a/index.html
+++ b/index.html
@@ -3,7 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Header — photo layout</title>
+<title>Pryobrazhenskaya Yulia — Арт-фотограф из Украины</title>
+<!-- Open Graph теги (для превью в соцсетях и мессенджерах) -->
+<meta property="og:title" content="Pryobrazhenskaya Yulia — Арт-фотограф из Украины" />
+<meta property="og:description" content="Фотопроекты о любви, свободе и творчестве. Посмотрите портфолио или запишитесь на съёмку." />
+<meta property="og:image" content="https://pryobrazhenskaya.vercel.app/images/about-main.jpgg" />
+<meta property="og:url" content="https://pryobrazhenskaya.vercel.app/" />
+<meta property="og:type" content="website" />
+
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Pryobrazhenskaya Yulia — Арт-фотограф" />
+<meta name="twitter:description" content="Авторская фотография о любви, свободе и творчестве. Портфолио и заказ съёмки." />
+<meta name="twitter:image" content="https://pryobrazhenskaya.vercel.app/images/about-main.jpg" />
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
