--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <meta property="og:image" content="https://pryobrazhenskaya.vercel.app/images/about-main.jpgg" />
 <meta property="og:url" content="https://pryobrazhenskaya.vercel.app/" />
 <meta property="og:type" content="website" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 
 
 <meta name="twitter:card" content="summary_large_image" />
