--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="lang " aria-label="Выбор языка">
             <a href="index.html" class="is-active" lang="ru">RU</a>
             <a href="en.html" lang="en">EN</a>
-            <a href="ua.htmn" lang="uk">UA</a>
+            <a href="ua.html" lang="uk">UA</a>
           </div>
 
         <!-- Навигация (десктоп) -->
