add last photos

--- a/en.html
+++ b/en.html
@@ -278,6 +278,29 @@ This was the strongest catalyst for my creativity: "Creating with nothing."</p>
 <div class="slide"><img src="./images/portfolio/photo9.jpg" alt="Personal work 9"></div>
 <div class="slide"><img src="./images/portfolio/photo10.jpg" alt="Personal work 10"></div>
 <div class="slide"><img src="./images/portfolio/photo11.jpg" alt="Personal work 11"></div>
+<div class="slide"><img src="./images/portfolio/photo12.PNG" alt="Индивидуальная работа 0"></div>
+<div class="slide"><img src="./images/portfolio/photo13.PNG" alt="Индивидуальная работа 1"></div>
+<div class="slide"><img src="./images/portfolio/photo14.JPEG" alt="Индивидуальная работа 2"></div>
+<div class="slide"><img src="./images/portfolio/photo15.JPEG" alt="Индивидуальная работа 3"></div>
+<div class="slide"><img src="./images/portfolio/photo16.JPEG" alt="Индивидуальная работа 4"></div>
+<div class="slide"><img src="./images/portfolio/photo17.JPG" alt="Индивидуальная работа 5"></div>
+<div class="slide"><img src="./images/portfolio/photo18.JPG" alt="Индивидуальная работа 6"></div>
+<div class="slide"><img src="./images/portfolio/photo19.JPG" alt="Индивидуальная работа 7"></div>
+<div class="slide"><img src="./images/portfolio/photo20.JPG" alt="Индивидуальная работа 8"></div>
+<div class="slide"><img src="./images/portfolio/photo21.JPG" alt="Индивидуальная работа 9"></div>
+<div class="slide"><img src="./images/portfolio/photo22.JPG" alt="Индивидуальная работа 10"></div>
+<div class="slide"><img src="./images/portfolio/photo23.JPG" alt="Индивидуальная работа 11"></div>
+<div class="slide"><img src="./images/portfolio/photo24.JPG" alt="Индивидуальная работа 0"></div>
+<div class="slide"><img src="./images/portfolio/photo25.JPG" alt="Индивидуальная работа 1"></div>
+<div class="slide"><img src="./images/portfolio/photo26.JPG" alt="Индивидуальная работа 2"></div>
+<div class="slide"><img src="./images/portfolio/photo27.JPG" alt="Индивидуальная работа 3"></div>
+<div class="slide"><img src="./images/portfolio/photo28.JPG" alt="Индивидуальная работа 4"></div>
+<div class="slide"><img src="./images/portfolio/photo29.JPG" alt="Индивидуальная работа 5"></div>
+<div class="slide"><img src="./images/portfolio/photo30.JPG" alt="Индивидуальная работа 6"></div>
+<div class="slide"><img src="./images/portfolio/photo31.JPG" alt="Индивидуальная работа 7"></div>
+<div class="slide"><img src="./images/portfolio/photo32.JPG" alt="Индивидуальная работа 8"></div>
+<div class="slide"><img src="./images/portfolio/photo33.JPG" alt="Индивидуальная работа 9"></div>
+
 </div>
 <button class="slider__btn next"><svg class="arrow-nexr" width="15" height="30" viewBox="0 0 33 56" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M0.380116 0.905669L32.127 27.9992L0.380119 55.4928" stroke="current"/>
@@ -301,6 +324,21 @@ This was the strongest catalyst for my creativity: "Creating with nothing."</p>
 <div class="slide"><img src="./images/portfolio/com7.jpg" alt="Commercial work 7"></div>
 <div class="slide"><img src="./images/portfolio/com8.jpg" alt="Commercial work 8"></div>
 <div class="slide"><img src="./images/portfolio/com9.jpg" alt="Commercial work 9"></div>
+<div class="slide"><img src="./images/portfolio/com10.JPG" alt="Коммерческая работа 0"></div>
+<div class="slide"><img src="./images/portfolio/com11.JPG" alt="Коммерческая работа 1"></div>
+<div class="slide"><img src="./images/portfolio/com12.JPG" alt="Коммерческая работа 2"></div>
+<div class="slide"><img src="./images/portfolio/com13.JPG" alt="Коммерческая работа 3"></div>
+<div class="slide"><img src="./images/portfolio/com14.JPG" alt="Коммерческая работа 4"></div>
+<div class="slide"><img src="./images/portfolio/com15.JPG" alt="Коммерческая работа 5"></div>
+<div class="slide"><img src="./images/portfolio/com16.JPG" alt="Коммерческая работа 6"></div>
+<div class="slide"><img src="./images/portfolio/com17.PNG" alt="Коммерческая работа 7"></div>
+<div class="slide"><img src="./images/portfolio/com18.JPG" alt="Коммерческая работа 8"></div>
+<div class="slide"><img src="./images/portfolio/com19.JPG" alt="Коммерческая работа 9"></div>
+<div class="slide"><img src="./images/portfolio/com20.JPEG" alt="Коммерческая работа 5"></div>
+<div class="slide"><img src="./images/portfolio/com21.JPEG" alt="Коммерческая работа 6"></div>
+<div class="slide"><img src="./images/portfolio/com22.JPEG" alt="Коммерческая работа 7"></div>
+<div class="slide"><img src="./images/portfolio/com23.JPEG" alt="Коммерческая работа 8"></div>
+
 </div>
 <button class="slider__btn next"><svg class="arrow-nexr" width="15" height="30" viewBox="0 0 33 56" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M0.380116 0.905669L32.127 27.9992L0.380119 55.4928" stroke="current"/>
@@ -354,6 +392,22 @@ This was the strongest catalyst for my creativity: "Creating with nothing."</p>
 <div class="slide print"><img src="./images/prints/prin9.jpg" alt="Print 9"></div>
 <div class="slide print"><img src="./images/prints/prin10.jpg" alt="Print 10"></div>
 <div class="slide print"><img src="./images/prints/prin11.jpg" alt="Print 11"></div>
+<div class="slide print"><img src="./images/prints/prin12.jpg" alt="Индивидуальная работа 0"></div>
+<div class="slide print"><img src="./images/prints/prin13.jpg" alt="Индивидуальная работа 1"></div>
+<div class="slide print"><img src="./images/prints/prin14.jpg" alt="Индивидуальная работа 2"></div>
+<div class="slide print"><img src="./images/prints/prin15.jpg" alt="Индивидуальная работа 3"></div>
+<div class="slide print"><img src="./images/prints/prin16.jpg" alt="Индивидуальная работа 4"></div>
+<div class="slide print"><img src="./images/prints/prin17.jpg" alt="Индивидуальная работа 5"></div>
+<div class="slide print"><img src="./images/prints/prin18.jpg" alt="Индивидуальная работа 6"></div>
+<div class="slide print"><img src="./images/prints/prin19.jpg" alt="Индивидуальная работа 7"></div>
+<div class="slide print"><img src="./images/prints/prin20.PNG" alt="Индивидуальная работа 8"></div>
+
+<div class="slide print"><img src="./images/prints/prin22.JPG" alt="Индивидуальная работа 10"></div>
+<div class="slide print"><img src="./images/prints/prin23.JPG" alt="Индивидуальная работа 5"></div>
+<div class="slide print"><img src="./images/prints/prin24.JPG" alt="Индивидуальная работа 6"></div>
+<div class="slide print"><img src="./images/prints/prin25.JPG" alt="Индивидуальная работа 7"></div>
+<div class="slide print"><img src="./images/prints/prin26.jpg" alt="Индивидуальная работа 7"></div>
+
 
 </div>
 <button class="slider__btn next"><svg class="arrow-nexr" width="15" height="30" viewBox="0 0 33 56" fill="none" xmlns="http://www.w3.org/2000/svg">
