--- a/index.html
+++ b/index.html
@@ -424,20 +424,22 @@
 <div class="slide print"><img src="./images/prints/prin9.jpg" alt="Индивидуальная работа 8"></div>
 <div class="slide print"><img src="./images/prints/prin10.jpg" alt="Индивидуальная работа 9"></div>
 <div class="slide print"><img src="./images/prints/prin11.jpg" alt="Индивидуальная работа 10"></div>
-<!-- <div class="slide print"><img src="./images/prints/prin12.HEIC" alt="Индивидуальная работа 0"></div> -->
-<!-- <div class="slide print"><img src="./images/prints/prin13.HEIC" alt="Индивидуальная работа 1"></div> -->
-<!-- <div class="slide print"><img src="./images/prints/prin14.HEIC" alt="Индивидуальная работа 2"></div> -->
-<!-- <div class="slide print"><img src="./images/prints/prin15.HEIC" alt="Индивидуальная работа 3"></div> -->
-<!-- <div class="slide print"><img src="./images/prints/prin16.HEIC" alt="Индивидуальная работа 4"></div> -->
-<div class="slide print"><img src="./images/prints/prin17.JPG" alt="Индивидуальная работа 5"></div>
-<!-- <div class="slide print"><img src="./images/prints/prin18.HEIC" alt="Индивидуальная работа 6"></div> -->
-<!-- <div class="slide print"><img src="./images/prints/prin19.HEIC" alt="Индивидуальная работа 7"></div> -->
+<div class="slide print"><img src="./images/prints/prin12.jpg" alt="Индивидуальная работа 0"></div>
+<div class="slide print"><img src="./images/prints/prin13.jpg" alt="Индивидуальная работа 1"></div>
+<div class="slide print"><img src="./images/prints/prin14.jpg" alt="Индивидуальная работа 2"></div>
+<div class="slide print"><img src="./images/prints/prin15.jpg" alt="Индивидуальная работа 3"></div>
+<div class="slide print"><img src="./images/prints/prin16.jpg" alt="Индивидуальная работа 4"></div>
+<div class="slide print"><img src="./images/prints/prin17.jpg" alt="Индивидуальная работа 5"></div>
+<div class="slide print"><img src="./images/prints/prin18.jpg" alt="Индивидуальная работа 6"></div>
+<div class="slide print"><img src="./images/prints/prin19.jpg" alt="Индивидуальная работа 7"></div>
 <div class="slide print"><img src="./images/prints/prin20.PNG" alt="Индивидуальная работа 8"></div>
-<!-- <div class="slide print"><img src="./images/prints/prin21.HEIC" alt="Индивидуальная работа 9"></div> -->
+
 <div class="slide print"><img src="./images/prints/prin22.JPG" alt="Индивидуальная работа 10"></div>
 <div class="slide print"><img src="./images/prints/prin23.JPG" alt="Индивидуальная работа 5"></div>
 <div class="slide print"><img src="./images/prints/prin24.JPG" alt="Индивидуальная работа 6"></div>
 <div class="slide print"><img src="./images/prints/prin25.JPG" alt="Индивидуальная работа 7"></div>
+<div class="slide print"><img src="./images/prints/prin26.jpg" alt="Индивидуальная работа 7"></div>
+
 
 
 </div>
